# python-switchos

./: .gitignore  README.md  pyproject.toml
examples/: aiohttp_example.py  httpx_example.py
src/python_switchos/: client.py  endpoint.py  http.py  utils.py
src/python_switchos/endpoints/: __init__.py  acl.py  fwd.py  host.py  igmp.py  lacp.py  link.py  rstp.py  sfp.py  snmp.py  stats.py  sys.py  vlan.py
tests/: conftest.py  test_acl_endpoint.py  test_aclstats_endpoint.py  test_dhost_endpoint.py  test_fwd_endpoint.py  test_host_endpoint.py  test_igmp_endpoint.py  test_lacp_endpoint.py  test_link_endpoint.py  test_poe_endpoint.py  test_rstp_endpoint.py  test_sfp_endpoint.py  test_snmp_endpoint.py  test_stats_endpoint.py  test_sys_endpoint.py  test_utils.py  test_vlan_endpoint.py
tests/fixtures/!aclstats_b/: synthetic_24port_response_1.expected  synthetic_24port_response_1.txt  synthetic_5port_response_1.expected  synthetic_5port_response_1.txt
tests/fixtures/css106_2.16/!stats_b/: css106_2.16_response_1.txt
tests/fixtures/css106_2.16/acl_b/: css106_2.16_response_1.txt
tests/fixtures/css106_2.16/fwd_b/: css106_2.16_response_1.txt
tests/fixtures/css106_2.16/link_b/: css106_2.16_response_1.expected
tests/fixtures/link_b/: css610-8g-2s+_2.21_response_1.expected  css610_response_1.expected  css610_response_1.txt  css610_response_2.expected  css610_response_2.txt
tests/fixtures/sys_b/: css610-8g-2s+_2.21_response_1.txt  css610_response_1.expected
tests/tools/: __init__.py  all_analyses.json  compare_fields.py  compatibility_report.py  generate_fixtures.py
(+295 files in other folders)
