[project]
name = "python-switchos"
version = "0.0.7"
description = "Python library to interact with MikroTik SwitchOS and SwitchOS Lite"
authors = [
  { name = "Robert Pattis" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "mikrotik",
  "switchos",
  "switchos lite",
  "api",
]
dependencies = [
  "demjson3>=3.0.6"
]
[project.optional-dependencies]
aiohttp = ["aiohttp >= 3.12"]
httpx = ["httpx >= 0.28"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
[project.urls]
Homepage = "https://github.com/probert94/python-switchos"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
